<resources>
    <string name="home_title">COPD BreathCare</string>
    <string name="training">호흡 훈련</string>
    <string name="record">기록</string>

    <string name="t_title">Training</string>
    <string name="r_title">Recording</string>
    <string name="cat">CAT/mMRC검사</string>
    <string name="status">현재 상태 평가</string>
    <string name="app_name">COPD</string>
    <string name="btn_diaphragm">횡격막 호흡법</string>
    <string name="btn_lung">폐분절 호흡법</string>
    <string name="btn_mouse">오므린 입술 호흡법</string>
    <string name="btn_diaphragm_training">횡격막 강화 운동</string>
    <string name="btn_home">Home</string>

    <string name="guide">Guide</string>
    <string name="goal">목표</string>
    <string name="method">방법</string>
    <string name="diaphragm_text">
        환자로 하여금 덜 힘들게 호흡을 하도록 하며 환기의 효율성을 증가시키고, 횡격막의 상승과 하강 거리를
증가시킨다.</string>
    <string name="diaphragm_method_text">
        환자는 편안한 자세를 취하도록 하고(일반적으로 누워서 기댄 자세; Semi-Fowler’s position), 각각 배와 가슴에 손을 올려놓고 흡기 시 가슴은 움직이지 않고 배가 움직이는 것을 느끼며 호흡하도록 한다. 처음에는 5∼10분간 하루 3∼4회 실시하고 점차 운동 시간을 늘린다. 모든 훈련은 가장 편한 자세에서 시작하여 점차 누운 자세, 앉은 자세, 선 자세, 보행 중 호흡운동으로 발전시킨다.
    </string>
    <string name="btn_start">Start!</string>
    <string name="timerstart5">5분 타이머 시작</string>
    <string name="timerstart10">10분 타이머 시작</string>

    <string name="timerEnd">완료!</string>
    <string name="Count">완료 횟수: 0회</string>

    <!-- 폐분절 호흡법 -->
    <string name="lung_text">
        국소적 환기 장애 환자를 대상으로 저환기(hypoventilation) 상태의 폐의 특정 부분의 확장을 도모하는
호흡법이다.
    </string>
    <string name="lung_method_text">
        환자는 원하는 폐 부위에 손을 올려놓고 압력을 가한 다음 환자에게 외부 손의 압력에 직접 대항해 깊은
흡기를 하도록 한다. 흡기가 진행함에 따라 서서히 손에 힘을 빼고 흡기 말에는 전혀 힘을 주지 않은 상태가 되도록
한다.
    </string>
    <!-- 오므린 입술 호흡법 -->
    <string name="mouse_text">
        입안에서 생긴 양압이 기도 내로 전달되어 소기도의 폐쇄를 막아주고 분비물 축적도 방지한다. 호기를
연장시켜 분당 호흡 수를 감소시키고, 안정 시 1회 흡기용적을 증가시키고, 운동 능력을 향상시킨다. 일반적으로 COPD
환자의 발작성 숨가쁜 호흡(SOB)을 조절하기 위해 사용된다.
    </string>
    <string name="mouse_method_text">
        목과 어깨 근육이 이완된 상태로 천천히 깊게 코를 통해 흡입하고 호기 시 입술을 둥글게 모아 촛불을
불듯 천천히 공기를 배출한다. 흡기와 호기의 비율이 1:2가 되도록 한다(예: 흡기 2초, 호기 4초). 이 때, 이완된 상태로
천천히 길게 호흡하도록 유도하고 강제적 호기는 피하도록 한다(횡격막의 이완과 폐탄성을 활용할 것)
    </string>
    <!-- 횡격막 강화운동 -->
    <string name="dt_method_text">
        횡격막 호흡을 시행하면서 시술자의 손을 통해 압력을 가하거나 책
또는 추를 올려놓은 방법으로 강화운동을 시행한다. 추(또는 모래주머니)를 사용
하는 경우 처음에 명치 아래에 1.5∼2.5 kg의 무게부터 시작 하여 호흡 보조근
도움없이 15분 동안 횡격막 호흡이 가능하면 점차 무게를 늘리도록 한다
    </string>

    <!--CAT-->
    <string name="CAT_Text2">귀하의 만성폐쇄성폐질환(COPD)은 어떠십니까? 만성폐쇄성폐질환(COPD) 평가 검사(CAT)를 해주십시오.
다음 질문들은 귀하와 담당 의료진이 만성폐쇄성폐질환(COPD)이 귀하의 육체적, 정신적 건강과 일상생활에 미치는 영향을 평가하기 위한 것입니다. 답안과 검사 점수는 만성폐쇄성폐질환(COPD) 관리를 향상시키고 치료 효과를 최대화하는데 사용될 수 있습니다.
아래 각 항목마다 현재 귀하의 건강상태를 가장 잘 표현한 칸을 선택해 주십시오.</string>
    <string name="CAT1">1. 나는 전혀 기침을 하지 않는다 → 항상 기침을 한다</string>
    <string name="CAT2">2. 나는 가슴에 전혀 가래가 없다 → 가슴에 가래가 가득 차 있다</string>
    <string name="CAT3">3. 나는 전혀 가슴이 답답함을 느끼지 않는다 → 나는 가슴이 아주 답답함을 느낀다.</string>
    <string name="CAT4">4. 나는 언덕이나 계단을 오를 때 전혀 숨이 차지 않다 → 나는 언덕이나 계단을 오를 때 아주 숨이 차다</string>
    <string name="CAT5">5. 나는 집에서 활동하는데 전혀 제약을 받지 않는다 → 나는 집에서 활동하는데 많은 제약을 받는다</string>
    <string name="CAT6">6. 폐질환에도 불구하고 나느 외출하는데 자신이 있다. → 폐질환으로 인하여 나는 외출하는데 전혀 자신이 없다</string>
    <string name="CAT7">7. 나는 잠을 깊이 잔다 → 폐질환으로 인하여 나는 잠을 깊이 자지 못한다</string>
    <string name="CAT8">8. 나는 기운이 왕성하다 → 나는 전혀 기운이 없다</string>
    <string name="CAT_Text">진료 및 질환과 관련된 부분은 의사선생님과 상담해 주십시오</string>

    <string name="mMRC">mMRC (호흡곤란 척도)를 선택해주세요.</string>
    <string name="mMRC0">0: 힘든 운동 시에만 숨이 참</string>
    <string name="mMRC1">1: 평지를 빠르게 걷거나 오르막길에서 숨이 참</string>
    <string name="mMRC2">2: 평지를 걷다 숨 차서 멈춤</string>
    <string name="mMRC3">3: 100m 걷기 또는 수 분 걷기 후 숨이 참</string>
    <string name="mMRC4">4: 옷 입고 벗을 때도 숨이 참</string>

    <string name="alarm_title">호흡운동 알림 설정</string>
    <string name="btn_set_alarm">알림 설정</string>
    <string name="alarm_not_set">⏰ 알림 시간이 설정되지 않았습니다.</string>
    <string name="alarm_set_prefix">⏰ 알림 설정됨:</string>


    <string name="ask_breath">현재 호흡 상태를 선택하세요:</string>
    <string name="breath_bad">숨참</string>
    <string name="breath_normal">보통</string>
    <string name="breath_good">편안</string>

    <string name="ask_mood">현재 기분 상태를 선택하세요:</string>
    <string name="mood_anxious">불안</string>
    <string name="mood_normal">보통</string>
    <string name="mood_relaxed">편안</string>

    <string name="dialog_title_start">훈련 전 상태 입력</string>
    <string name="dialog_title_end">훈련 후 상태 입력</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="result_summary">훈련 전: %1$s + %2$s\n훈련 후: %3$s + %4$s\n→ 변화를 확인해보세요!</string>
</resources>