<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#F5F9FF">

    <TextView
        android:id="@+id/alarmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#003366"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner" />

    <Button
        android:id="@+id/btnSetAlarm"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/btn_set_alarm"
        android:backgroundTint="#003366"
        android:fontFamily="sans-serif-medium"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/txtAlarmInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_not_set"
        android:textColor="#003366"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />
    <Button
        android:id="@+id/btnHome"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#003366"
        android:fontFamily="sans-serif-medium"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/btn_home"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
