<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">
        <TextView
            android:id="@+id/TrainingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_title"
            android:textColor="#003366"
            android:textSize="35sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="159dp"
            android:layout_marginBottom="35dp"/>

        <Button
            android:id="@+id/btnDiaphragm"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="#003366"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/btn_diaphragm"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="554dp"
            android:layout_marginBottom="35dp"/>

        <Button
            android:id="@+id/btnLung"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="#003366"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/btn_lung"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="296dp"
            android:layout_marginBottom="35dp"/>

        <Button
            android:id="@+id/btnMouse"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="#003366"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/btn_mouse"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="377dp"
            android:layout_marginBottom="35dp"/>

        <Button
            android:id="@+id/btnDTraining"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="#003366"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/btn_diaphragm_training"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="466dp"
            android:layout_marginBottom="35dp"/>

        <Button
            android:id="@+id/btnHome"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="#003366"
            android:fontFamily="sans-serif-medium"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/btn_home"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="663dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>